# UnixplorationBuddy

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.agents/workflows/: checkpoint.md  conductor-elite.md  conductor.md  grill.md  new-track.md
conductor/: context.md  index.md  prd.md  project-context.md  pulse.md  relay.md  tracks.md  workflow.md
conductor/adr/: 0001-rust-ratatui-standalone-tui.md  0002-journal-files-primary-data-source.md  0003-self-contained-value-calculation.md  0004-async-edsm-enrichment-via-ureq.md  0005-offline-exobiology-prediction.md  0006-hybrid-exobiology-prediction-fallback.md  0007-flatpak-sandboxing-polling-log-tailer.md  0008-backward-compatible-planetary-key-encoding.md  0009-orrery-real-time-3d-keplerian-sim.md  0010-orrery-scale-normalization-in-multi-star-systems.md  0011-state-snapshot-instant-cold-start.md  0012-poi-anomaly-detection-engine.md  0013-jumponium-system-level-detection.md  0014-header-bar-poi-ticker.md  0015-codex-key-single-decrement-upgrade.md
conductor/canonn-data/: Amphora Plant.json  Bacterium.json  Bacterium.md  Bark Mounds.json  Clypeus.json  Clypeus.md  Concha.json  Concha.md  Crystalline Shards.json  Electricae.json  Fonticulua.json  Fonticulua.md  Frutexa.md  Fumerola.json  Fumerola.md  Fungoida.json  Fungoida.md  Osseus.md  Recepta.json  Recepta.md  Sinuous Tubers.json  Stratum.json  Stratum.md  Tubus.md  Tussock.json  Tussock.md  aleoida.md  amphora-plant.md  cactoida.md  electricae.md  (+2 more)
scratch/: journal_telemetry_monitor.py
src/: app.rs  journal.rs  main.rs  persistence.rs  state.rs
(+74 files in other folders)
