[package]
name = "unixploration-buddy"
version = "0.1.0"
edition = "2024"
description = "A standalone TUI exploration companion for Linux commanders"
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
ed-journals = "0.12.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
ureq = "3.3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
